[project]
name = "polygon-pavilion"
version = "0.1.0"
requires-python = ">=3.9,<3.10"
dependencies = ["rhino-stubs-typed~=8.20.25157"]

[dependency-groups]
dev = ["pyright>=1.1.407", "ruff>=0.14.6"]

[tool.pyright]
typeCheckingMode = "strict"
extraPaths = ["src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["TC", "BLE", "B009"]
